@@ -1,9 +1,9 @@
 package sg.edu.nus.iss.AD_Locum_Doctors.controllers;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -13,20 +13,12 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-
 import jakarta.servlet.http.HttpSession;
-import sg.edu.nus.iss.AD_Locum_Doctors.firebaseservice.FirebaseService;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.AdditionalFeeDetailsForm;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.Clinic;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.JobAdditionalRemarks;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.JobPost;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.JobPostForm;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.JobStatus;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.RemarksCategory;
-import sg.edu.nus.iss.AD_Locum_Doctors.model.User;
+import sg.edu.nus.iss.AD_Locum_Doctors.model.*;
 import sg.edu.nus.iss.AD_Locum_Doctors.repository.JobAdditionalRemarksRepository;
 import sg.edu.nus.iss.AD_Locum_Doctors.service.AdditionalFeeDetailsService;
 import sg.edu.nus.iss.AD_Locum_Doctors.service.ClinicService;
+import sg.edu.nus.iss.AD_Locum_Doctors.service.JobPostAdditionalRemarksService;
 import sg.edu.nus.iss.AD_Locum_Doctors.service.JobPostService;
 import sg.edu.nus.iss.AD_Locum_Doctors.service.UserService;
 
@@ -48,21 +40,24 @@ public class JobPostController {
 	@Autowired
 	private JobAdditionalRemarksRepository jobAdditionalRemarksRepo;
 
+	@Autowired
+	private JobPostAdditionalRemarksService addRemarksService;
+
 	@GetMapping("/list")
 	public String jobPostListPage(Model model, HttpSession session) {
 		User user = (User) session.getAttribute("user");
 		List<JobPost> jobPosts = new ArrayList<>();
-
+		jobPosts = jobPostService.findAll().stream()
+				.sorted(Comparator.comparing(JobPost::getDateTimeModified).reversed())
+				.collect(Collectors.toList());
 		switch (user.getRole().getName()) {
 			case "System_Admin":
-				jobPosts = jobPostService.findAll();
 				model.addAttribute("jobPosts", jobPosts);
 				return "admin_jobpost_list";
 			default:
-				jobPosts = jobPostService.findJobPostsCreatedByUser(user).stream()
-						.filter(x -> !x.getStatus().equals(JobStatus.DELETED))
+				jobPosts = jobPosts.stream().filter(x -> x.getClinic().getOrganization().getId() == user.getOrganization().getId())
 						.filter(x -> !x.getStatus().equals(JobStatus.REMOVED))
-						.toList();
+						.collect(Collectors.toList());
 				model.addAttribute("jobPosts", jobPosts);
 				return "jobpost-list";
 		}
@@ -71,9 +66,6 @@ public class JobPostController {
 	@GetMapping("/create")
 	public String createJobPostPage(Model model, HttpSession session) {
 		User user = (User) session.getAttribute("user");
-		if (user == null) {
-			return "redirect:/login";
-		}
 		List<Clinic> clinics = clinicService.findAll().stream()
 				.filter(x -> x.getOrganization().getId() == user.getOrganization().getId()).toList();
 		model.addAttribute("clinics", clinics);
@@ -90,27 +82,29 @@ public class JobPostController {
 
 	@GetMapping("/{id}")
 	public String viewJobPost(@PathVariable String id, Model model, HttpSession session) {
+		User user = (User) session.getAttribute("user");
 		JobPost jobPost = jobPostService.findJobPostById(id);
+		jobPost.setAdditionalRemarks("");
 		model.addAttribute("jobPost", jobPost);
-		model.addAttribute("statusList", List.of(
-				JobStatus.ACCEPTED,
-				JobStatus.COMPLETED_PENDING_PAYMENT,
-				JobStatus.COMPLETED_PAYMENT_PROCESSED,
-				JobStatus.CANCELLED));
-
 		List<JobAdditionalRemarks> remarksList = jobAdditionalRemarksRepo.findAll().stream()
 				.filter(x -> x.getJobPost().getId() == jobPost.getId())
-				.sorted(Comparator.comparing(JobAdditionalRemarks::getDate).reversed()).toList();
+				.sorted(Comparator.comparing(JobAdditionalRemarks::getDateTime).reversed()).toList();
 		model.addAttribute("remarksList", remarksList);
-		AdditionalFeeDetailsForm additional = new AdditionalFeeDetailsForm();
-		additional.setJobPostId(Long.parseLong(id));
+		ManyAdditionalFeeDetailsForm additional = new ManyAdditionalFeeDetailsForm();
+		additional.setJobPostId(jobPost.getId().toString());
 		model.addAttribute("additional", additional);
-		if (jobPost.getStatus().equals(JobStatus.OPEN) || jobPost.getStatus().equals(JobStatus.CANCELLED)) {
-			return "jobpost-view";
-		} else if (jobPost.getStatus().equals(JobStatus.PENDING_CONFIRMATION_BY_CLINIC)) {
-			return "jobpost-locum";
+		for (AdditionalFeeDetails a : jobPost.getAdditionalFeeDetails()) {
+			System.out.print(a.getAdditionalFeesAmount());
 		}
-		return "jobpost-accepted-view";
+		switch (user.getRole().getName()) {
+			case "System_Admin":
+				return "jobpost-view";
+			default:
+				if (jobPost.getStatus().equals(JobStatus.OPEN) || jobPost.getStatus().equals(JobStatus.CANCELLED)) {
+					return "jobpost-view";
+				}
+				return "jobpost-locum";
+		}
 	}
 
 	@GetMapping("/{id}/delete")
@@ -130,19 +124,8 @@ public class JobPostController {
 		toUpdateJobPost.setAdditionalRemarks(jobPost.getAdditionalRemarks());
 		toUpdateJobPost.setStatus(jobPost.getStatus());
 		jobPostService.saveJobPost(toUpdateJobPost);
-		
-		if (!jobPost.getAdditionalRemarks().equals("")) {
-			JobAdditionalRemarks additionalRemarks = new JobAdditionalRemarks();
-			additionalRemarks.setCategory(RemarksCategory.CANCELLATION);
-			additionalRemarks.setDate(LocalDate.now());
-			additionalRemarks.setJobPost(toUpdateJobPost);
-			additionalRemarks.setUser(user);
-			additionalRemarks.setRemarks(toUpdateJobPost.getAdditionalRemarks());
-			jobAdditionalRemarksRepo.saveAndFlush(additionalRemarks);
-		}
-		
-		jobPostService.pushNotificationToFreeLancer(toUpdateJobPost);
-		
+		addRemarksService.createJobPostAdditionalRemarks(RemarksCategory.GENERAL, user, toUpdateJobPost,
+				jobPost.getAdditionalRemarks());
 		return "redirect:/jobpost/" + jobPost.getId();
 	}
 
@@ -154,20 +137,9 @@ public class JobPostController {
 		jp.setStatus(JobStatus.CANCELLED);
 		jp.setAdditionalRemarks(jobPost.getAdditionalRemarks());
 		jobPostService.saveJobPost(jp);
-
-		if (!jobPost.getAdditionalRemarks().equals("")) {
-			JobAdditionalRemarks additionalRemarks = new JobAdditionalRemarks();
-			additionalRemarks.setCategory(RemarksCategory.CANCELLATION);
-			additionalRemarks.setDate(LocalDate.now());
-			additionalRemarks.setJobPost(jp);
-			additionalRemarks.setUser(user);
-			additionalRemarks.setRemarks(jp.getAdditionalRemarks());
-			jobAdditionalRemarksRepo.saveAndFlush(additionalRemarks);
-		}
-		
-		jobPostService.pushNotificationToFreeLancer(jp);
-		
-		return "redirect:/jobpost/list";
+		addRemarksService.createJobPostAdditionalRemarks(RemarksCategory.CANCELLATION, user, jp,
+				jobPost.getAdditionalRemarks());
+		return "redirect:/jobpost/" + id;
 	}
 
 	@PostMapping(value = "/update", params = "confirm-locum")
@@ -178,27 +150,67 @@ public class JobPostController {
 		jp.setStatus(JobStatus.ACCEPTED);
 		jp.setAdditionalRemarks(jobPost.getAdditionalRemarks());
 		jobPostService.saveJobPost(jp);
-		if (!jobPost.getAdditionalRemarks().equals("")) {
-			JobAdditionalRemarks additionalRemarks = new JobAdditionalRemarks();
-			additionalRemarks.setCategory(RemarksCategory.GENERAL);
-			additionalRemarks.setDate(LocalDate.now());
-			additionalRemarks.setJobPost(jp);
-			additionalRemarks.setUser(user);
-			additionalRemarks.setRemarks(jp.getAdditionalRemarks());
-			jobAdditionalRemarksRepo.saveAndFlush(additionalRemarks);
-		}
-		
-		jobPostService.pushNotificationToFreeLancer(jp);
-		
-		return "redirect:/jobpost/list";
+		addRemarksService.createJobPostAdditionalRemarks(RemarksCategory.ACCEPTION, user, jp,
+				jobPost.getAdditionalRemarks());
+		return "redirect:/jobpost/" + id;
+	}
+
+	@PostMapping(value = "/update", params = "pending-payment")
+	public String setPendingPaymentJobPostForm(JobPost jobPost, HttpSession session) {
+		User user = (User) session.getAttribute("user");
+		String id = jobPost.getId().toString();
+		JobPost jp = jobPostService.findJobPostById(id);
+		jp.setStatus(JobStatus.COMPLETED_PENDING_PAYMENT);
+		jp.setActualStartDateTime(jobPost.getActualStartDateTime());
+		jp.setActualEndDateTime(jobPost.getActualEndDateTime());
+		jp.setAdditionalRemarks(jobPost.getAdditionalRemarks());
+		jobPostService.saveJobPost(jp);
+		addRemarksService.createJobPostAdditionalRemarks(RemarksCategory.COMPLETED_JOB, user, jp,
+				jobPost.getAdditionalRemarks());
+		return "redirect:/jobpost/" + id;
+	}
+
+	@PostMapping(value = "/update", params = "payment-processed")
+	public String setPaymentProcessedJobPostForm(JobPost jobPost, HttpSession session) {
+		User user = (User) session.getAttribute("user");
+		String id = jobPost.getId().toString();
+		JobPost jp = jobPostService.findJobPostById(id);
+		jp.setStatus(JobStatus.COMPLETED_PAYMENT_PROCESSED);
+		jp.setAdditionalRemarks(jobPost.getAdditionalRemarks());
+		jobPostService.saveJobPost(jp);
+		addRemarksService.createJobPostAdditionalRemarks(RemarksCategory.PROCESSED_PAYMENT, user, jp,
+				jobPost.getAdditionalRemarks());
+		return "redirect:/jobpost/" + id;
 	}
 
 	@PostMapping("/additional")
-	public String createJobPostAdditional(AdditionalFeeDetailsForm additionalFeeDetailsForm) {
-		JobPost jobPost = jobPostService.findJobPostById(additionalFeeDetailsForm.getJobPostId().toString());
-		additionalFeeDetailsService.createAdditionalFeeDetail(additionalFeeDetailsForm, jobPost);
+	public String createManyJobPostAdditional(ManyAdditionalFeeDetailsForm manyAdditionalFeeDetailsForm) {
+		List<AdditionalFeeDetails> manyFeeDetails = manyAdditionalFeeDetailsForm.getAdditionalFeeDetails();
+		String jobPost_id = manyAdditionalFeeDetailsForm.getJobPostId();
+		JobPost jobPost = jobPostService.findJobPostById(jobPost_id);
+
+		if (manyFeeDetails != null) {
+			int i = 0;
+			while (i < manyFeeDetails.size()) {
+				if (manyFeeDetails.get(i).getDescription() != null
+						&& manyFeeDetails.get(i).getAdditionalFeesAmount() > 0) {
+					manyFeeDetails.get(i).setJobPost(jobPost);
+				}
+				i++;
+			}
+			jobPost.setAdditionalFeeDetails(manyFeeDetails);
+		}
+
+		jobPostService.saveJobPost(jobPost);
 
 		return "redirect:/jobpost/" + jobPost.getId();
+	}
+
+	@GetMapping("/{post_id}/additional/{id}/delete")
+	public String deleteAdditionalFee(@PathVariable String post_id, @PathVariable String id) {
+		AdditionalFeeDetails feeDetails = additionalFeeDetailsService.getAdditionalFeeDetailsById(id);
+		additionalFeeDetailsService.delete(feeDetails);
+		return "redirect:/jobpost/" + post_id;
 	}
 
 	@GetMapping("/{id}/adminremove")
